--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,21 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
+charset = utf-8
+
 # 2 space indentation
 indent_style = space
 indent_size = 2
+
+[*.{js,ts,json}]
+indent_style = space
+indent_size = 2
+
+# Tab indentation (no size specified)
+[Makefile]
+indent_style = tab
+
+[Dockerfile]
+indent_style = space
+indent_size = 4
