--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,13 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": true,
+    "forceConsistentCasingInFileNames": true,
+    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
