--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "html.suggest.angular1": false,
-  "html.suggest.ionic": false
+  "html.suggest.ionic": false,
+  "files.exclude": {
+    "functions/**/*": true
+  },
+  "search.exclude": {
+    "functions": true
+  }
 }
