--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.1",
     "firebase": "^5.4.2",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5",
     "firebaseui": "^3.4.0",
     "material-design-icons": "^3.0.1"
   },
