--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/node-fetch": "^2.1.2",
     "cors": "^2.8.4",
+    "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.5",
