--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@material/linear-progress": "^0.39.1",
     "@types/bluebird": "^3.5.24",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
+    "aurelia-fetch-client": "^1.6.0",
     "aurelia-mdc-bridge": "^0.17.1",
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.1",
+    "date-fns": "^1.29.0",
     "firebase": "^5.4.2",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
     "firebaseui": "^3.4.0",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "roboto-npm-webfont": "^1.0.1"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -110,7 +112,7 @@
   },
   "scripts": {
     "start": "au run --watch",
-    "deploy": "au build --env prod && firebase deploy",
+    "deploy": "au build --env prod && firebase deploy --only hosting",
     "test": "nps test"
   },
   "main": "dist/app.bundle.js"
