--- a/package.json
+++ b/package.json
@@ -16,63 +16,63 @@
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.1",
     "date-fns": "^1.29.0",
-    "firebase": "^5.4.2",
+    "firebase": "^5.5.4",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
-    "firebaseui": "^3.4.0",
+    "firebaseui": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "roboto-npm-webfont": "^1.0.1"
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@types/jest": "^22.2.0",
+    "@types/lodash": "^4.14.117",
+    "@types/node": "^9.6.35",
+    "@types/webpack": "^4.4.16",
     "aurelia-cli": "^0.34.0",
-    "aurelia-testing": "^1.0.0-beta.4.0.0",
-    "aurelia-tools": "^2.0.0",
-    "gulp": "^4.0.0",
-    "minimatch": "^3.0.4",
-    "through2": "^2.0.3",
-    "vinyl-fs": "^3.0.2",
-    "ts-loader": "^4.0.1",
-    "ts-node": "^7.0.0",
-    "@types/node": "^9.4.7",
-    "@types/lodash": "^4.14.105",
-    "@types/webpack": "^4.1.1",
-    "typescript": "^2.7.2",
-    "jest": "^22.4.2",
-    "jest-cli": "^23.0.0-alpha.0",
-    "plugin-error": "^1.0.1",
     "aurelia-loader-nodejs": "^1.0.1",
     "aurelia-pal-nodejs": "^1.0.0-beta.3.2.0",
-    "ts-jest": "^22.4.1",
-    "@types/jest": "^22.2.0",
     "aurelia-protractor-plugin": "^1.0.6",
-    "protractor": "^5.3.0",
-    "gulp-protractor": "^4.1.0",
-    "wait-on": "^2.1.0",
-    "sass-loader": "^6.0.7",
-    "node-sass": "^4.7.2",
-    "gulp-rename": "^1.2.2",
-    "html-webpack-plugin": "^3.0.6",
-    "copy-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^0.4.1",
+    "aurelia-testing": "^1.0.0",
+    "aurelia-tools": "^2.0.0",
     "aurelia-webpack-plugin": "^3.0.0-rc.1",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
-    "expose-loader": "^0.7.5",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "del": "^3.0.0",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^0.28.11",
+    "del": "^3.0.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^1.1.11",
+    "gulp": "^4.0.0",
+    "gulp-protractor": "^4.1.0",
+    "gulp-rename": "^1.2.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jest": "^22.4.2",
+    "jest-cli": "^23.6.0",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.4",
+    "minimatch": "^3.0.4",
+    "node-sass": "^4.7.2",
     "nps": "^5.8.2",
     "nps-utils": "^1.5.0",
-    "file-loader": "^1.1.11",
-    "json-loader": "^0.5.7",
-    "html-loader": "^0.5.5",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "opn": "^5.3.0",
-    "webpack-bundle-analyzer": "latest"
+    "opn": "^5.4.0",
+    "plugin-error": "^1.0.1",
+    "protractor": "^5.4.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "through2": "^2.0.3",
+    "ts-jest": "^22.4.1",
+    "ts-loader": "^4.0.1",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.7.2",
+    "url-loader": "^1.1.2",
+    "vinyl-fs": "^3.0.2",
+    "wait-on": "^2.1.0",
+    "webpack": "^4.20.2",
+    "webpack-bundle-analyzer": "latest",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.9"
   },
   "jest": {
     "modulePaths": [
