--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@firebase/firestore": "^0.8.8",
+    "@firebase/firestore-types": "^0.7.0",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.0",
     "aurelia-fetch-client": "^1.6.0",
@@ -15,61 +17,62 @@
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.2",
     "date-fns": "^1.29.0",
-    "firebase": "^5.5.4",
+    "firebase": "^5.5.9",
+    "firebase-tools": "^6.1.1",
     "firebaseui": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "roboto-npm-webfont": "^1.0.1"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "aurelia-cli": "^1.0.0-beta.2",
-    "aurelia-testing": "^1.0.0",
-    "aurelia-tools": "^2.0.0",
-    "gulp": "^4.0.0",
-    "minimatch": "^3.0.4",
-    "through2": "^2.0.3",
-    "vinyl-fs": "^3.0.3",
-    "ts-loader": "^5.2.1",
-    "ts-node": "^7.0.1",
-    "@types/node": "^10.11.6",
+    "@types/jest": "^23.3.5",
     "@types/lodash": "^4.14.117",
+    "@types/node": "^10.11.6",
     "@types/webpack": "^4.4.15",
-    "typescript": "^3.1.2",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "plugin-error": "^1.0.1",
+    "aurelia-cli": "^1.0.0-beta.6",
     "aurelia-loader-nodejs": "^1.0.1",
     "aurelia-pal-nodejs": "^1.1.1",
-    "ts-jest": "^23.10.4",
-    "@types/jest": "^23.3.5",
     "aurelia-protractor-plugin": "^1.0.6",
-    "protractor": "^5.4.1",
-    "gulp-protractor": "^4.1.0",
-    "wait-on": "^3.1.0",
-    "sass-loader": "^7.1.0",
-    "node-sass": "^4.9.3",
-    "gulp-rename": "^1.4.0",
-    "html-webpack-plugin": "^3.2.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^0.4.3",
+    "aurelia-testing": "^1.0.0",
+    "aurelia-tools": "^2.0.0",
     "aurelia-webpack-plugin": "^3.0.0",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
-    "expose-loader": "^0.7.5",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.1",
-    "del": "^3.0.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "del": "^3.0.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^2.0.0",
+    "gulp": "^4.0.0",
+    "gulp-protractor": "^4.1.0",
+    "gulp-rename": "^1.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.3",
+    "minimatch": "^3.0.4",
+    "node-sass": "^4.9.3",
     "nps": "^5.9.3",
     "nps-utils": "^1.7.0",
-    "file-loader": "^2.0.0",
-    "json-loader": "^0.5.7",
-    "html-loader": "^0.5.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "opn": "^5.4.0",
-    "webpack-bundle-analyzer": "latest"
+    "plugin-error": "^1.0.1",
+    "protractor": "^5.4.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "through2": "^2.0.3",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.2.1",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.2",
+    "url-loader": "^1.1.1",
+    "vinyl-fs": "^3.0.3",
+    "wait-on": "^3.1.0",
+    "webpack": "^4.20.2",
+    "webpack-bundle-analyzer": "latest",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "jest": {
     "modulePaths": [
