--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.5",
+    "firebase-tools": "^6.1.1",
     "node-fetch": "^2.2.0"
   },
   "devDependencies": {
